@@ -1,1 +1,6 @@
+The Maps Data API has been deprecated:
+
+http://googlegeodevelopers.blogspot.com/2010/11/maps-data-api-deprecation-announcement.html
+
+
 This sample should automatically build and copy over the GData.framework as part of the build-and-run process.
